--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
         android:theme="@style/Theme.Costuras"
         tools:targetApi="31">
         <activity
-            android:name=".Registro"
+            android:name=".auth.Registro"
             android:exported="false" />
         <activity
-            android:name=".InicioSesion"
+            android:name=".auth.InicioSesion"
             android:exported="false" />
         <activity
             android:name=".Splash"
