--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Costuras"
         tools:targetApi="31">
         <activity
+            android:name=".users.Perfil"
+            android:exported="false" />
+        <activity
             android:name=".auth.Registro"
             android:exported="false" />
         <activity
@@ -35,4 +38,5 @@
             android:name=".MainActivity"
             android:exported="true" />
     </application>
+
 </manifest>
