--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,16 @@
         android:theme="@style/Theme.Costuras"
         tools:targetApi="31">
         <activity
-            android:name=".users.Perfil"
+            android:name=".ui.admin.Administrar"
             android:exported="false" />
         <activity
-            android:name=".auth.Registro"
+            android:name=".ui.users.Perfil"
             android:exported="false" />
         <activity
-            android:name=".auth.InicioSesion"
+            android:name=".ui.auth.Registro"
+            android:exported="false" />
+        <activity
+            android:name=".ui.auth.InicioSesion"
             android:exported="false" />
         <activity
             android:name=".Splash"
