--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,10 @@
     <!-- PERMISOS -->
     <!-- INTERNET -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- CAMARA -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- CAMARA -->
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="true"
-        ></uses-feature>
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -21,6 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Costuras"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.users.productos.ProductosUser"
+            android:exported="false" />
         <activity
             android:name=".ui.admin.agregar.AgregarProducto"
             android:exported="false" />
